--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,9 @@
+trigger:
+- main
+
+pool:
+  vmImage: ubuntu-latest
+  
 steps:
 - task: UsePythonVersion@0
   displayName: 'Using Python Version 3.10'
