--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,31 +1,31 @@
+# Python package
+# Create and test a Python package on multiple Python versions.
+# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
+# https://docs.microsoft.com/azure/devops/pipelines/languages/python
+
 trigger:
 - main
 
 pool:
   vmImage: ubuntu-latest
+strategy:
+  matrix:
+    Python37:
+      python.version: '3.10'
 
 steps:
 - task: UsePythonVersion@0
-  displayName: 'Using Python Version 3.10'
   inputs:
-    versionSpec: '3.10'
+    versionSpec: '$(python.version)'
+  displayName: 'Use Python $(python.version)'
 
-- task: PublishCodeCoverageResults@1
-  inputs:
-    codeCoverageTool: Cobertura
-    summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.xml'
-
-- task: PublishTestResults@2
-  condition: succeededOrFailed()
-  inputs:
-    testResultsFiles: '**/test-*.xml'
-    testRunTitle: 'Publish test results for Python 3.10'
+- script: |
+    pip install youtube-search-python
+    pip install pillow
+    pip install customtkinter
+  displayName: 'Install dependencies'
 
 - script: |
     pip install pytest pytest-azurepipelines
-    pip install pytest-cov
-    pip install customtkinter
-    pip install youtube-search-python
-    pip install pillow
+    pytest
   displayName: 'pytest'
-    print('Hello')
